--- a/publisher/package.json
+++ b/publisher/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
+    "joi": "^17.3.0",
+    "nodemon": "^2.0.7",
     "redis": "^3.0.2"
   }
 }
