--- a/publisher/package.json
+++ b/publisher/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "nodemon": "^2.0.7",
